apps/bookstack/bookstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: bookstack
spec:
  selector:
    app: bookstack
  ports:
  - port: 80
    targetPort: 80
