apps/bookstack/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-mysql
  namespace: bookstack
spec:
  selector:
    app: bookstack-mysql
  ports:
  - port: 3306
    targetPort: 3306
