apps/bookstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
  namespace: bookstack
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  ingressClassName: nginx
  rules:
  - host: borgling-1.tail20def8.ts.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstack
            port:
              number: 80
